name:                ml-sb
version:             0.0.0
synopsis:            Minimal ML language to learn the Defunctionalization algorithm
license:             GPL-3
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library mlsb
  build-depends:
      base >=4.7 && <5
    , Earley
    , pretty-show
    , recursion-schemes
    , containers
    , unordered-containers
  exposed-modules:
      MLSB.Types
    , MLSB.Parser
    , MLSB.Eval
    , MLSB
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Wno-unused-imports -Wno-unused-matches

executable mlsb0
  main-is:
    Main.hs
  build-depends:
      base >=4.7 && <5
    , mlsb
  hs-source-dirs:
    app/mlsb0
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Wno-unused-imports

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    tests
  ghc-options: -Wall -Werror
  build-depends:
      base >=4.7 && < 5
    , bytestring
    , containers
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , mlsb
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-unused-imports

